# swanky-sample

./: package.json  swanky.config.json
.github/workflows/: tests.yaml
artifacts/flipper/1678771996425/: flipper.contract
artifacts/flipper/1678775176272/: flipper.json
artifacts/psp22/1678772032581/: psp22.json
artifacts/psp22/1678777020828/: psp22.contract
contracts/flipper/: Cargo.toml
contracts/psp22/: Cargo.toml
contracts/psp22/src/: lib.rs
test/flipper/typedContract/data/: flipper.json
test/flipper/typedContract/query/: flipper.ts
test/psp22/: psp22.test.ts
test/psp22/typedContract/build-extrinsic/: psp22.ts
test/psp22/typedContract/constructors/: psp22.ts
test/psp22/typedContract/contracts/: psp22.ts
test/psp22/typedContract/data/: psp22.json
test/psp22/typedContract/event-data/: psp22.json
test/psp22/typedContract/event-types/: psp22.ts
test/psp22/typedContract/events/: psp22.ts
test/psp22/typedContract/mixed-methods/: psp22.ts
test/psp22/typedContract/query/: psp22.ts
test/psp22/typedContract/tx-sign-and-send/: psp22.ts
test/psp22/typedContract/types-arguments/: psp22.ts
test/psp22/typedContract/types-returns/: psp22.ts
